--- a/report/sections/process_perspective/security.tex
+++ b/report/sections/process_perspective/security.tex
@@ -22,7 +22,7 @@
 
 \subsubsection{Threat sources}
 % Identify threat sources (e.g. SQL injection)
-\paragraph{} Thread sources can be diverse, and acttack different layers of our application:
+\paragraph{} Thread sources can be diverse, and they can attack different layers of our application:
 \begin{itemize}
 	\item Vulnerabilities in our code: Among the vulnerabilities that we \textbf{could} have, these are the most relevant ones:
 	      \begin{itemize}
