--- a/report/sections/system_perspective/dependencies.tex
+++ b/report/sections/system_perspective/dependencies.tex
@@ -10,10 +10,10 @@ The list below, is the technolgies we are using in our application, group into c
 	\item Microsoft AspNetCore v2 as the foundational framework.
 	\item Dotnet API framework: For handling RESTFul APIs
 	\item Swagger: For dotnet API visualization
-	\item Microsoft EntityFrameworkCore version 8.x: Secure and reiable data transactions
+	\item Microsoft EntityFrameworkCore version 8.x: Secure and reliable data transactions
 	\item Postgress v.8: Stable data storage
 	\item Docker : For containerized applications
-	\item gravatar: For provide user profile images.
+	\item gravatar: For generating user profile images.
 	\item Github: For storing and deploying source code
 	\item DigitalOcean: Production server for our application
 \end{itemize}
@@ -21,7 +21,7 @@ The list below, is the technolgies we are using in our application, group into c
 \subsection*{Monitoring}
 
 \begin{itemize}
-	\item prometheus/prometheus-net/prometheus-net.AspNetCore: For provide metrics to Grafana.
+	\item Prometheus: For providing metrics to Grafana.
 	\item Grafana: For Data Visualization of data from prometheus and direct data from Postgress database.
 \end{itemize}
 
@@ -36,7 +36,7 @@ The list below, is the technolgies we are using in our application, group into c
 \subsection*{Software quality - Testing}
 
 \begin{itemize}
-	\item Sonarqube: Static analyzer for code quality and securit issues
+	\item Sonarqube: Static analyzer for code quality and security issues
 	\item CodeClimate: Another static analyzer also for code quality and securit issues
 	\item Playwright: UI testing
 	\item Cypress: End-2-end testing
