--- a/report/sections/lessons_learned/operation.tex
+++ b/report/sections/lessons_learned/operation.tex
@@ -13,11 +13,11 @@ inoperable.%, and we were forced to find a new hosting solution for our project.
 We decided to migrate to DigitalOcean.
 %Getting deployed on DigitalOcean was trivial, but 
 Since we were now very wary of the consequences of depleting our credits, we consistently opted for the cheapest resources available to us.
-This later caused major operational issues, as our DigitalOcean VM's would exhaust their storage capacity with logs%., which was also unexpected by us.
+This later caused major operational issues, as our DigitalOcean VMs would exhaust their storage capacity with logs%., which was also unexpected by us.
 %While it was easy to prune the logs and redeploy, the surprising nature of the issue did affect our operation.
 %Another issue related to our frugal mentality came in the form of memory constraints, were some of the auxillairy services used so much memory, that the VM ran out of RAM and resorted to swap memory, which made the performance of the MiniTwit applicaiton grind to a halt.
 
-In retrospect, we hypothesize that, as a group, our stance on resource spenditure went from a laissez-faire approach, where we did not consider if resources were depletable, to a polar opposite position, where we were overly careful not to spend resouces.
+In retrospect, we hypothesize that, as a group, our stance on resource spenditure went from a laissez-faire approach, where we did not consider if resources were depletable, to a polar opposite position, where we were overly careful not to spend resources.
 %A review of our DigitalOcean credits show that we still have a significant left.
 The lesson learned from this is that in DevOps, one should carefully consider how to spend the resources available: Spend too much, and the lights might go out. Spend too little, and one risks suffocating the system unnecesarily.
 %The right approach seems to conduct an initial analysis of the optimal allocation of the resources available, implement the findings of that analysis, and then consistently monitor the actual usage so that the scale of the infrastructure can be adjusted to the real-life cost, a cost that most likely depends on a dynamic factors such as user traffic.
