--- a/report/sections/process_perspective/monitoring.tex
+++ b/report/sections/process_perspective/monitoring.tex
@@ -8,7 +8,7 @@ We chose Prometheus as it is a is a powerful and widely used open-source tool fo
 %We chose this tool for its open-souce nature, ease of use, powerful query language and simple interoperability with Grafana.
 %Prometheus was used as a docker container running on our VMs and it was used for quering monitoring data about our running .NET minitwit application
 Setting up Prometheus really was as easy as just getting a docker image of it running.
-All the data source configuring was done through Grafana-%, including all visualization of the data itself. This ease of use was very evident and convenient.
+All the data source configuring was done through Grafana.%, including all visualization of the data itself. This ease of use was very evident and convenient.
 
 \subsection{Grafana}
 
@@ -21,15 +21,14 @@ Grafana is an open-souce tool, that we decided to use for its ability to visuali
 \subsection{Implementation of monitoring}
 
 A docker container of Prometheus and Grafana is running on the manager node in our docker swarm.
-Prometheus has been programmed through Grafana to gather and display metrics on all MiniTwit instances.% in all worker nodes and display them on the manager nodes Grafana dashboard.
+Prometheus has been programmed through Grafana to gather and display metrics on all MiniTwit instances. % in all worker nodes and display them on the manager nodes Grafana dashboard.
 %Metrics would be gathered on \{url\}:8080/metrics and that is where Prometheus can find them.
 In addition, Grafana gathers data from a managed DigitalOcean database, and displays metrics such as total followers and total tweets.
-
-The following figure describes how monitoring was implemented.
+Figure \ref{fig:Monitoring2} describes how monitoring was implemented.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{Monitoring2.png}
+	\includegraphics[width=0.6\textwidth]{Monitoring2.png}
 	\caption{Diagram describing our monitoring implementation}
 	\label{fig:Monitoring2}
 \end{figure}
@@ -42,21 +41,21 @@ The following figure describes how monitoring was implemented.
 
 \subsection{Monitoring configuration}
 
-Grafana and Prometheus are configured in a way, so that when initiating a docker swarm of with a manager nodes running docker images of them, then all necessary configuration gets set up automatically.
+Grafana and Prometheus are configured in a way, so that when initiating a docker swarm with a manager nodes running docker images of them, then all necessary configuration gets set up automatically.
 
 \subsubsection{Prometheus configuration}
 
-Prometheus gets configured using a yml file that gets inserted into the manager nodes Prometheus Docker image as a volume through a compose.yml file.
+Prometheus gets configured using a YAML file that gets inserted into the manager nodes Prometheus Docker image as a volume through a YAML file.
 
 \subsubsection{Grafana configuration}
 
-Grafana data sources are set up using a \texttt{.yml} file that gets inserted into the manager into the manager nodes Grafana Docker image using volumes. This file also
+Grafana data sources are also set up using a YAML file that gets inserted into the Grafana docker image of the manager node, by using volumes. This file also
 %The fon 
 contains variables about how to set up a Postgres database connection and a Prometheus monitoring connection.
 
 Additionally, two dashboards get added to the Grafana Docker image as json files, which contain the configuration of them.
 %They contain all the variables and setup parameters required to automatically set up the required dashboards.
 
-Users are set up using a shell script.
+Users are set up using a shell script:
 After the Grafana Docker image is running, a shell script sends a curl API call to the running Docker image every 5 seconds until success, in order to add the neccesary users.
 %The API call contains the users that are needed to set up automatically.
