--- a/report/sections/system_perspective/currentstate.tex
+++ b/report/sections/system_perspective/currentstate.tex
@@ -16,8 +16,8 @@ but by filtering out included implementations of JavaScript libraries, the real 
 After the filtering, we found 6 critical issues, which were all related to our usage of JavaScript libraries.
 %Mostly of these is from the javascript lib we are using, for some reason even try to filter code, so only \texttt{C\#} code is shown, it still include it. Also it was also possible to filter critical issues, here were 6 found, but related to our used third party javascript library jquery. %So nothing we can do here. 
 
-\subsection*{Sonarqube}
-Sunarqube report several issues. Mostly it report security issues, because we are logging to much in our application, which could cause security issues.
+\subsection*{SonarQube}
+SonarQube reports several issues. Mostly, it reports security issues, because we are logging too much in our application, which could cause security issues.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\textwidth]{sonarqube.png}
